03-gitops/apps/monitoring/loki/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ingress
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - loki.cluster
      secretName: loki-tls
  rules:
    - host: loki.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-stack
                port:
                  number: 3100
